--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>The Seven Wonders of the Ancient World<title>
+  <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <header>
     <h1>The Seven Wonders of the Ancient World<h1>
   </header>
+  <figure>
+    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
+    <figcaption>
+      <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </figcaption>
+  </figure>
 </body>
+</html>
