Adding the second figure

--- a/index.html
+++ b/index.html
@@ -16,5 +16,29 @@
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </figcaption>
   </figure>
+  <figure>
+    <img src="images/temple-of-artemis.jpg" alt ="">
+    <figcaption>
+      <h2>Temple of Artemis</h2>
+      <dl>Construction:</dl>
+      <dt>Circa 550 BC</dt>
+      <dl>Builders:</dl>
+      <dt>Greeks</dt>
+      <dl>Location:</dl>
+      <dt>Selçuk, Turkey</dt>
+    </figcaption>
+  </figure>
+  <figure>
+    <img src="images/colossus-of-rhodes.jpg" alt ="">
+    <figcaption>
+      <h2>Colossus of Rhodes</h2>
+      <dl>Construction:</dl>
+      <dt>292–280 BC</dt>
+      <dl>Builders:</dl>
+      <dt>Greeks</dt>
+      <dl>Location:</dl>
+      <dt>Rhodes, Greece</dt>
+    </figcaption>
+  </figure>
 </body>
 </html>
