Create the main.css file

--- a/index.html
+++ b/index.html
@@ -40,5 +40,17 @@
       <dt>Rhodes, Greece</dt>
     </figcaption>
   </figure>
+  <figure>
+    <img src="images/hanging-gardens-of-babylon.jpg" alt ="">
+    <figcaption>
+      <h2>Gardens of Babylon</h2>
+      <dl>Construction:</dl>
+      <dt>Circa 600 BC</dt>
+      <dl>Builders:</dl>
+      <dt>Babylonians</dt>
+      <dl>Location:</dl>
+      <dt>Nineveh, Iraq</dt>
+    </figcaption>
+  </figure>
 </body>
 </html>
