Update the main.css file

--- a/index.html
+++ b/index.html
@@ -6,51 +6,53 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <header>
+  <header role = "banner">
     <h1>The Seven Wonders of the Ancient World<h1>
   </header>
-  <figure>
-    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
-    <figcaption>
-      <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
-      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/temple-of-artemis.jpg" alt ="">
-    <figcaption>
-      <h2>Temple of Artemis</h2>
-      <dl>Construction:</dl>
-      <dt>Circa 550 BC</dt>
-      <dl>Builders:</dl>
-      <dt>Greeks</dt>
-      <dl>Location:</dl>
-      <dt>Selçuk, Turkey</dt>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/colossus-of-rhodes.jpg" alt ="">
-    <figcaption>
-      <h2>Colossus of Rhodes</h2>
-      <dl>Construction:</dl>
-      <dt>292–280 BC</dt>
-      <dl>Builders:</dl>
-      <dt>Greeks</dt>
-      <dl>Location:</dl>
-      <dt>Rhodes, Greece</dt>
-    </figcaption>
-  </figure>
-  <figure>
-    <img src="images/hanging-gardens-of-babylon.jpg" alt ="">
-    <figcaption>
-      <h2>Gardens of Babylon</h2>
-      <dl>Construction:</dl>
-      <dt>Circa 600 BC</dt>
-      <dl>Builders:</dl>
-      <dt>Babylonians</dt>
-      <dl>Location:</dl>
-      <dt>Nineveh, Iraq</dt>
-    </figcaption>
-  </figure>
+  <main role = "main">
+    <figure>
+      <img class = "banner" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role = presentation>
+      <figcaption class = "text">
+        <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
+        <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+      </figcaption>
+    </figure>
+    <figure>
+      <img src="images/temple-of-artemis.jpg" alt ="" role = presentation>
+      <figcaption>
+        <h2>Temple of Artemis</h2>
+        <dl>Construction:</dl>
+        <dt>Circa 550 BC</dt>
+        <dl>Builders:</dl>
+        <dt>Greeks</dt>
+        <dl>Location:</dl>
+        <dt>Selçuk, Turkey</dt>
+      </figcaption>
+    </figure>
+    <figure>
+      <img src="images/colossus-of-rhodes.jpg" alt ="" role = presentation>
+      <figcaption>
+        <h2>Colossus of Rhodes</h2>
+        <dl>Construction:</dl>
+        <dt>292–280 BC</dt>
+        <dl>Builders:</dl>
+        <dt>Greeks</dt>
+        <dl>Location:</dl>
+        <dt>Rhodes, Greece</dt>
+      </figcaption>
+    </figure>
+    <figure>
+      <img src="images/hanging-gardens-of-babylon.jpg" alt ="" role = presentation>
+      <figcaption>
+        <h2>Gardens of Babylon</h2>
+        <dl>Construction:</dl>
+        <dt>Circa 600 BC</dt>
+        <dl>Builders:</dl>
+        <dt>Babylonians</dt>
+        <dl>Location:</dl>
+        <dt>Nineveh, Iraq</dt>
+      </figcaption>
+    </figure>
+  </main>
 </body>
 </html>
