--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="utf-8">
   <title>The Seven Wonders of the Ancient World</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@0;1&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <header role = "banner">
     <h1>The Seven Wonders of the Ancient World<h1>
   </header>
+  <figure class = "banner">
+    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role = presentation>
+    <figcaption class = "text">
+      <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </figcaption>
+  </figure>
   <main role = "main">
-    <figure>
-      <img class = "banner" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role = presentation>
-      <figcaption class = "text">
-        <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
-        <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-      </figcaption>
-    </figure>
     <figure>
       <img src="images/temple-of-artemis.jpg" alt ="" role = presentation>
       <figcaption>
