Fix errors in index.html file

--- a/index.html
+++ b/index.html
@@ -8,51 +8,57 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <header role = "banner">
-    <h1>The Seven Wonders of the Ancient World<h1>
+  <header role="banner">
+    <h1>The Seven Wonders of the Ancient World</h1>
   </header>
-  <figure class = "banner">
-    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role = presentation>
-    <figcaption class = "text">
+  <div class="banner">
+    <img src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role="presentation">
+    <div class="text">
       <h2>Remarkable constructions of classical antiquity—lost in time.</h2>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-    </figcaption>
-  </figure>
-  <main role = "main">
+    </div>
+  </div>
+  <main role="main">
     <figure>
-      <img src="images/temple-of-artemis.jpg" alt ="" role = presentation>
+      <img src="images/temple-of-artemis.jpg" alt="" role="presentation">
       <figcaption>
         <h2>Temple of Artemis</h2>
-        <dl>Construction:</dl>
-        <dt>Circa 550 BC</dt>
-        <dl>Builders:</dl>
-        <dt>Greeks</dt>
-        <dl>Location:</dl>
-        <dt>Selçuk, Turkey</dt>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        </dl>
       </figcaption>
     </figure>
     <figure>
-      <img src="images/colossus-of-rhodes.jpg" alt ="" role = presentation>
+      <img src="images/colossus-of-rhodes.jpg" alt="" role="presentation">
       <figcaption>
         <h2>Colossus of Rhodes</h2>
-        <dl>Construction:</dl>
-        <dt>292–280 BC</dt>
-        <dl>Builders:</dl>
-        <dt>Greeks</dt>
-        <dl>Location:</dl>
-        <dt>Rhodes, Greece</dt>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>292–280 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+        </dl>
       </figcaption>
     </figure>
     <figure>
-      <img src="images/hanging-gardens-of-babylon.jpg" alt ="" role = presentation>
+      <img src="images/hanging-gardens-of-babylon.jpg" alt="" role="presentation">
       <figcaption>
         <h2>Gardens of Babylon</h2>
-        <dl>Construction:</dl>
-        <dt>Circa 600 BC</dt>
-        <dl>Builders:</dl>
-        <dt>Babylonians</dt>
-        <dl>Location:</dl>
-        <dt>Nineveh, Iraq</dt>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
       </figcaption>
     </figure>
   </main>
